fix(bs-templates): list item action links alignment slightly off

--- a/bs-templates/templates/home/style.scss
+++ b/bs-templates/templates/home/style.scss
@@ -81,10 +81,6 @@
         a:focus {
           text-decoration: underline;
         }
-
-        a + a {
-          margin-left: 12px;
-        }
       }
     }
   }
